feat: Focus record skill on recording and add troubleshooting sections
Narrow skill scope to recording AppMap data (not setup/config). Add
per-language troubleshooting sections sourced from reference docs covering
common errors, debugging env vars, and known gotchas.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>